# miniAV

./: .gitignore  LICENSE  Makefile  README.md  miniav_design.MD  release.py
.github/workflows/: codecs-native-build.yml  dart-ci.yml  native-build.yml
miniav/: CHANGELOG.md  README.md  pubspec.yaml  pubspec_overrides.yaml
miniav/example/: miniav_example.dart
miniav/lib/: miniav.dart
miniav/test/: miniav_audio_input_test.dart  miniav_camera_test.dart  miniav_core_test.dart  miniav_gpu_interop_test.dart  miniav_inject_test.dart  miniav_input_test.dart  miniav_loopback_test.dart  miniav_screen_test.dart  miniav_subscriptions_test.dart  miniav_test.dart
miniav_ffi/: CHANGELOG.md  README.md  pubspec.yaml  pubspec_overrides.yaml
miniav_ffi/hook/: build.dart
miniav_ffi/lib/: miniav_ffi.dart  miniav_ffi_audio_input.dart  miniav_ffi_bindings.dart  miniav_ffi_camera.dart  miniav_ffi_loopback.dart  miniav_ffi_screen.dart  miniav_ffi_subscriptions.dart  miniav_ffi_types.dart
miniav_ffi/miniav_c/: CMakeLists.txt  MOBILE_PLATFORM_SPEC.md  NATIVE_AUDIT.md  REMOTE_DESKTOP_AV_PLAN.md
miniav_ffi/miniav_c/include/: export.h  miniav.h  miniav_buffer.h  miniav_capture.h  miniav_playback.h  miniav_types.h
miniav_ffi/miniav_c/src/audio/: audio_context.c  audio_context.h
miniav_ffi/miniav_c/src/audio/ios/: miniav_avaudiosession_ios.m
miniav_ffi/miniav_c/src/audio/test/: test_audio_capture.c
miniav_ffi/miniav_c/src/audio_output/: audio_output_context.c  audio_output_context.h
miniav_ffi/miniav_c/src/audio_output/test/: test_audio_output.c
miniav_ffi/miniav_c/src/camera/: camera_api.c  camera_context.h
miniav_ffi/miniav_c/src/camera/android/: camera_context_android_camera2.c  camera_context_android_camera2.h
miniav_ffi/miniav_c/src/camera/ios/: camera_context_ios_avf.h  camera_context_ios_avf.mm
miniav_ffi/miniav_c/src/camera/linux/: camera_context_linux_pipewire.c  camera_context_linux_pipewire.h
miniav_ffi/miniav_c/src/camera/macos/: camera_context_macos_avf.h  camera_context_macos_avf.mm
miniav_ffi/miniav_c/src/camera/test/: test_camera_capture.c
miniav_ffi/miniav_c/src/camera/windows/: camera_context_win_mf.c  camera_context_win_mf.h
miniav_ffi/miniav_c/src/common/: miniav.c  miniav_context_base.c  miniav_context_base.h  miniav_device_watcher.c  miniav_device_watcher.h  miniav_jni_android.c  miniav_jni_android.h  miniav_logging.c  miniav_logging.h  miniav_time.c  miniav_time.h  miniav_utils.c  miniav_utils.h
miniav_ffi/miniav_c/src/inject/: inject_api.c  inject_context.h
miniav_ffi/miniav_c/src/inject/linux/: inject_context_linux_uinput.c  inject_context_linux_uinput.h
miniav_ffi/miniav_c/src/inject/macos/: inject_context_macos_cgevent.h  inject_context_macos_cgevent.mm
miniav_ffi/miniav_c/src/inject/windows/: inject_context_win_sendinput.c  inject_context_win_sendinput.h
miniav_ffi/miniav_c/src/input/: input_api.c  input_context.h
miniav_ffi/miniav_c/src/input/linux/: input_context_linux_evdev.c  input_context_linux_evdev.h
miniav_ffi/miniav_c/src/input/macos/: input_context_macos_cgtap.h  input_context_macos_cgtap.mm
miniav_ffi/miniav_c/src/input/test/: test_input_capture.c
miniav_ffi/miniav_c/src/input/windows/: input_context_win_rawinput.c  input_context_win_rawinput.h
miniav_ffi/miniav_c/src/loopback/: loopback_api.c  loopback_context.h
miniav_ffi/miniav_c/src/loopback/linux/: loopback_context_linux_pipewire.c  loopback_context_linux_pipewire.h
miniav_ffi/miniav_c/src/loopback/macos/: loopback_context_macos_coreaudio.h  loopback_context_macos_coreaudio.mm
miniav_ffi/miniav_c/src/loopback/test/: test_loopback_capture.c
miniav_ffi/miniav_c/src/loopback/windows/: loopback_context_win_wasapi.c  loopback_context_win_wasapi.h
miniav_ffi/miniav_c/src/screen/: screen_api.c  screen_context.h
miniav_ffi/miniav_c/src/screen/android/: screen_context_android_mediaprojection.c  screen_context_android_mediaprojection.h
miniav_ffi/miniav_c/src/screen/ios/: miniav_broadcast_protocol.h  miniav_broadcast_sender.h  miniav_broadcast_sender.m  screen_context_ios_replaykit.h  screen_context_ios_replaykit.mm
miniav_ffi/miniav_c/src/screen/ios/broadcast_extension/: SETUP.md  SampleHandler.swift
miniav_ffi/miniav_c/src/screen/linux/: screen_context_linux_pipewire.c  screen_context_linux_pipewire.h
miniav_ffi/miniav_c/src/screen/macos/: screen_context_macos_cg.h  screen_context_macos_cg.mm
miniav_ffi/miniav_c/src/screen/test/: test_screen_capture.c
miniav_ffi/miniav_c/src/screen/windows/: screen_context_win_dxgi.c  screen_context_win_dxgi.h  screen_context_win_wgc.cpp  screen_context_win_wgc.h
miniav_ffi/test/: audio_capture_pull_test.dart  audio_output_ffi_test.dart  decode_c_string_test.dart  miniav_audio_test.dart  miniav_camera_test.dart  miniav_core_test.dart  miniav_inject_test.dart  miniav_loopback_test.dart  miniav_screen_test.dart
miniav_flutter/: CHANGELOG.md  README.md  pubspec.yaml  pubspec_overrides.yaml
miniav_flutter/android/: build.gradle
miniav_flutter/android/src/main/cpp/: CMakeLists.txt  miniav_flutter_jni.c
miniav_flutter/lib/: miniav_flutter.dart
miniav_platform_interface/: CHANGELOG.md  pubspec.yaml
miniav_platform_interface/lib/: miniav_audio_input_interface.dart  miniav_camera_interface.dart  miniav_loopback_interface.dart  miniav_platform_interface.dart  miniav_platform_types.dart  miniav_screen_interface.dart
miniav_tools/: .gitignore  README.md  release.py
miniav_tools/docs/: PLAYER_PLAN.md  WEB_PLAN.md  miniav_tools_design.MD
miniav_tools/miniav_player/: CHANGELOG.md  README.md  pubspec.yaml  pubspec_overrides.yaml
miniav_tools/miniav_recorder/: CHANGELOG.md  README.md  pubspec.yaml  pubspec_overrides.yaml
miniav_tools/miniav_tools_codecs/native/: CMakeLists.txt  flac_decode.c  frame_convert.c  mf_aac.c  mf_decoder.c  mf_encoder.c  mp3_decode.c  opus_decode.c  vorbis_decode.c
miniav_tools/miniav_tools_codecs/native/cmake/: opus.cmake
miniav_tools/miniav_tools_ffmpeg/tool/shim_c/: CMakeLists.txt  shim.c
miniav_web/: CHANGELOG.md  README.md  pubspec.yaml  pubspec_overrides.yaml
(+375 files in other folders)
